demo-virtualization-portal/base/gitea/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: gitea
  labels:
    app.kubernetes.io/part-of: virt-portal
