demo-virtualization-portal/base/gitea/route.yaml
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: gitea
  namespace: gitea
  labels:
    app: gitea
    app.kubernetes.io/name: gitea
    app.kubernetes.io/part-of: virt-portal
spec:
  host: gitea-gitea.__BASE_DOMAIN__
  to:
    kind: Service
    name: gitea
  port:
    targetPort: http
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
